[package]
name = "freya-hooks"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[features]
use_camera = ["dep:nokhwa"]

[dependencies]
freya-elements = { workspace = true }
freya-node-state = { workspace = true }
freya-common = { workspace = true }
freya-core = { workspace = true }
torin = { workspace = true }

dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }

skia-safe = { workspace = true }
tokio = { workspace = true }
winit = { workspace = true }
accesskit = { workspace = true }

euclid = { workspace = true }
uuid = { workspace = true }
tween = "2.0.0"
ropey = "1.6.0"
nokhwa = { version = "0.10.3", features = ["input-native"], optional = true }
bytes = "1.3.0"
unicode-segmentation = "1.10.1"

[dev-dependencies]
dioxus = { workspace = true }
freya = { workspace = true }
freya-testing = { workspace = true }
