[package]
name = "freya-layout"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
workspace = true
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[dependencies]
freya-common = { workspace = true }
freya-node-state = { workspace = true }
freya-dom = { workspace = true }
freya-elements = { workspace = true }

dioxus-core = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus = { workspace = true }

tokio = { workspace = true }
skia-safe = { workspace = true }

rustc-hash= { workspace = true }
uuid = { version =  "1.2.2", features = ["v4"]}

[dev-dependencies]
freya-components = { workspace = true }
freya-dom = { workspace = true }

dioxus-native-core-macro = { workspace = true }
dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }

fxhash = { workspace = true }
rustc-hash= { workspace = true }
anymap = { workspace = true }
lazy_static = "1.4.0"
