[package]
name = "freya-layout"
description = "Internal layout and layers management for Freya."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
workspace = true
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[dependencies]
freya-common = { workspace = true }
freya-node-state = { workspace = true }
freya-dom = { workspace = true }
freya-elements = { workspace = true }
torin = { workspace = true }

dioxus-core = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus = { workspace = true }

tokio = { workspace = true }
skia-safe = { workspace = true }
accesskit = { workspace = true }

rustc-hash= { workspace = true }
uuid = { version =  "1.2.2", features = ["v4"]}

[dev-dependencies]
freya-components = { workspace = true }
freya-dom = { workspace = true }

dioxus-native-core-macro = { workspace = true }
dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }

fxhash = { workspace = true }
rustc-hash= { workspace = true }
anymap = { workspace = true }
lazy_static = "1.4.0"
