[package]
name = "freya-processor"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.58.0"
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[dependencies]
glutin_tao = { version = "0.30.1", features = ["serde"]}
skia-safe = { version = "0.58.0", features = ["gl", "textlayout", "svg"] }
dioxus-rsx = { git = "https://github.com/DioxusLabs/dioxus", rev="fdf72b709a1ccc3924f67bbd7ae236d3fffacc51"}
dioxus-native-core = { git = "https://github.com/DioxusLabs/dioxus", rev="fdf72b709a1ccc3924f67bbd7ae236d3fffacc51"}
dioxus-core-macro = { git = "https://github.com/DioxusLabs/dioxus", rev="fdf72b709a1ccc3924f67bbd7ae236d3fffacc51"}
dioxus-hooks = { git = "https://github.com/DioxusLabs/dioxus", rev="fdf72b709a1ccc3924f67bbd7ae236d3fffacc51"}
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus", rev="fdf72b709a1ccc3924f67bbd7ae236d3fffacc51"}
freya-layout = { path = "../layout", version = "0.1.0" }
freya-node-state = { path = "../state", version = "0.1.0" }
freya-elements = { path = "../elements", version = "0.1.0" }
freya-layers = { path = "../layers", version = "0.1.0" }
freya-common = { path = "../common", version = "0.1.0" }
rustc-hash = "1.1.0"
euclid = "0.22.7"
tracing = "0.1"
tokio = { version = "1.23.0", features = ["sync", "rt-multi-thread", "time"] }
