[package]
name = "freya-renderer"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.58.0"
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[dependencies]
gl = "*"
glutin = { version = "0.29.0"}
skia-safe = { version = "0.58.0", features = ["gl", "textlayout", "svg"] }
dioxus-rsx = { git = "https://github.com/DioxusLabs/dioxus", rev="1aaff40bcdbb22fe7ff31428847e610f9db2e1e0"}
dioxus-native-core = { git = "https://github.com/DioxusLabs/dioxus", rev="1aaff40bcdbb22fe7ff31428847e610f9db2e1e0"}
dioxus-core-macro = { git = "https://github.com/DioxusLabs/dioxus", rev="1aaff40bcdbb22fe7ff31428847e610f9db2e1e0"}
dioxus-hooks = { git = "https://github.com/DioxusLabs/dioxus", rev="1aaff40bcdbb22fe7ff31428847e610f9db2e1e0"}
dioxus-core = { git = "https://github.com/DioxusLabs/dioxus", rev="1aaff40bcdbb22fe7ff31428847e610f9db2e1e0"}
freya-layout = { path = "../layout", version = "0.1.0" }
freya-node-state = { path = "../state", version = "0.1.0" }
freya-elements = { path = "../elements", version = "0.1.0" }
freya-common = { path = "../common", version = "0.1.0" }
freya-core = { path = "../core", version = "0.1.0" }
futures = "0.3.25"
tokio = { version = "1.23.0", features = ["sync", "rt-multi-thread", "time", "macros"] }
