[package]
name = "freya-renderer"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
version = "0.60.0"
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[dependencies]
gl = "*"
glutin = "0.30.6"
glutin-winit = "0.3.0"
winit = "0.28.2"
raw-window-handle = "0.5.1"

skia-safe = { workspace = true }

dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }
dioxus-hot-reload = { workspace = true }

freya-layout = { path = "../layout", version = "0.1.0" }
freya-node-state = { path = "../state", version = "0.1.0" }
freya-elements = { path = "../elements", version = "0.1.0" }
freya-common = { path = "../common", version = "0.1.0" }
freya-core = { path = "../core", version = "0.1.0" }
freya-dom = { path = "../dom", version = "0.1.0" }

futures = "0.3.25"
tokio = { version = "1.23.0", features = ["sync", "rt-multi-thread", "time", "macros"] }