[package]
name = "freya-renderer"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[target."cfg(target_os = \"linux\")".dependencies.skia-safe]
workspace = true
features = ["gl", "textlayout", "svg", "x11", "wayland"]

[dependencies]
freya-layout = { workspace = true }
freya-node-state = { workspace = true }
freya-elements = { workspace = true }
freya-common = { workspace = true }
freya-core = { workspace = true }
freya-dom = { workspace = true }
torin = { workspace = true }

dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }
dioxus-hot-reload = { workspace = true }

tokio = { workspace = true }
skia-safe = { workspace = true }
gl = { workspace = true }
glutin = { workspace = true }
glutin-winit = { workspace = true }
raw-window-handle = { workspace = true }
winit = { workspace = true }
accesskit = { workspace = true }
accesskit_winit = { workspace = true }

uuid = { workspace = true }
futures = { workspace = true }
