[package]
name = "freya-node-state"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[dependencies]
freya-elements = { workspace = true }
freya-common = { workspace = true }

dioxus-native-core-macro = { workspace = true }
dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }

tokio = { workspace = true }
skia-safe = { workspace = true }

anymap = "0.12.1"
fxhash = "0.2.1"
bytes = "1.3.0"
smallvec = "1.10.0"
