[package]
name = "freya-testing"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[dependencies]
winit = "0.28.2"

dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }
dioxus-native-core-macro = { workspace = true }

freya-elements = { path = "../elements", version = "0.1.0"}
freya-common = { path = "../common", version = "0.1.0" }
freya-layout = { path = "../layout", version = "0.1.0" }
freya-node-state = { path = "../state", version = "0.1.0" }
freya-core = { path = "../core", version = "0.1.0" }
freya-dom = { path = "../dom", version = "0.1.0", features = ["shared"]}

tokio = { version = "1.23.0", features = ["macros", "sync", "rt", "time"]}
futures = "0.3.25"
rustc-hash = "1.1.0"
anymap = "0.12.1"
skia-safe = { workspace = true }

[dev-dependencies]
freya-components ={ path = "../components"}
dioxus = { git = "https://github.com/Demonthos/dioxus", branch="fix-event-bubling", features = ["macro", "hooks", "hot-reload"]}
