[package]
name = "freya-testing"
description = "Cross-platform GUI Library."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../readme.md"
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "cross-platform", "dioxus", "skia", "graphics"]
categories = ["GUI"]

[dependencies]
freya-elements = { workspace = true }
freya-common = { workspace = true }
freya-layout = { workspace = true }
freya-node-state = { workspace = true }
freya-core = { workspace = true }
freya-dom = { workspace = true, features = ["shared"]}
torin = { workspace = true }

dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }
dioxus-native-core-macro = { workspace = true }

winit = { workspace = true }
tokio = { workspace = true }
skia-safe = { workspace = true }
accesskit = { workspace = true }

rustc-hash= { workspace = true }
anymap = { workspace = true }

[dev-dependencies]
freya-components = { workspace = true }
dioxus = { workspace = true }
