[package]
name = "freya-common"
description = "Internal common utilities for Freya."
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../../readme.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[package.metadata.docs.rs]
features = ["freya-engine/mocked-engine"]

[features]
skia-engine = ["freya-engine/skia-engine"]

[dependencies]
torin = { workspace = true }

dioxus-core = { workspace = true }

accesskit = { workspace = true }
winit = { workspace = true }
freya-engine = { workspace = true }
freya-native-core = { workspace = true }
rustc-hash= { workspace = true }

itertools = "0.13.0"
uuid = { workspace = true }


[dev-dependencies]
dioxus = { workspace = true }
freya = { path = "../freya" }
freya-testing = { path = "../testing" }
tokio = { workspace = true }
