[package]
name = "freya-components-docs"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
tokio = { workspace = true }
freya = { workspace = true }
freya-testing = { workspace = true }
winit = { workspace = true }
dioxus-router = { workspace = true }
dioxus = { workspace = true }


[build-dependencies]
tokio = { workspace = true, features = ["fs"]}