[package]
name = "freya-components"
description = "Components library desgined for Freya."
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../../README.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[package.metadata.docs.rs]
features = ["freya-engine/mocked-engine", "docs"]

[features]
skia-engine = ["freya-engine/skia-engine"]
docs = ["embed-doc-image"]

[dependencies]
freya-elements = { workspace = true }

freya-hooks = { workspace = true }

freya-core = { workspace = true }
freya-engine = { workspace = true }
torin = { workspace = true }

dioxus-router = { workspace = true }
dioxus = { workspace = true }
futures-util = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }

open = "5"
reqwest = "0.12.0"
bytes = "1.5.0"
embed-doc-image = { version = "0.1.4", optional = true }

[dev-dependencies]
freya = { path = "../freya" }
freya-testing = { path = "../testing" }
