[package]
name = "freya-components"
description = "Components library desgined for Freya."
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../../README.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[package.metadata.docs.rs]
features = ["freya-engine/mocked-engine", "docs"]

[features]
skia-engine = ["freya-engine/skia-engine"]
docs = ["network-image", "dep:embed-doc-image"]
network-image = ["dep:reqwest", "dep:bytes"]
winit = ["freya-core/winit", "freya-hooks/winit"]

[dependencies]
freya-elements = { workspace = true }
freya-hooks = { workspace = true }
freya-core = { workspace = true }
freya-engine = { workspace = true }
torin = { workspace = true }

freya-router = { workspace = true }
dioxus = { workspace = true }
warnings = "0.2.1"

futures-util = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

open = "5"
reqwest = { version = "0.12.0", optional = true }
bytes = { version = "1.5.0", optional = true }
embed-doc-image = { version = "0.1.4", optional = true }

[dev-dependencies]
freya = { path = "../freya" }
freya-testing = { path = "../testing" }
