[package]
name = "freya-core"
description = "Internal core funcionatilies for Freya."
version = "0.3.3"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../../README.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[package.metadata.docs.rs]
features = ["freya-engine/mocked-engine"]

[features]
rc-dom = []
skia-engine = ["freya-engine/skia-engine"]
fade-cached-incremental-areas = []

[dependencies]
freya-elements = { workspace = true }
freya-engine = { workspace = true }
torin = { workspace = true }
freya-native-core = { workspace = true }
freya-native-core-macro = { workspace = true }

dioxus-core = { workspace = true }
shipyard = { workspace = true }
keyboard-types = "0.8.0"

nom = "7.1.3"
bytes = "1.5.0"
tokio = { workspace = true }
winit = { workspace = true }
accesskit = { workspace = true }
accesskit_winit = { workspace = true }

rustc-hash = { workspace = true }
tracing = { workspace = true }
itertools = "0.14.0"
smallvec = { workspace = true }

[dev-dependencies]
dioxus = { workspace = true }
freya = { path = "../freya" }
freya-testing = { path = "../testing" }
