[package]
name = "freya-core"
description = "Internal core funcionatilies for Freya."
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../../README.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[package.metadata.docs.rs]
features = ["freya-engine/mocked-engine"]

[features]
default = []
rc-dom = []
skia-engine = ["freya-engine/skia-engine"]
fade-cached-incremental-areas = []
winit = ["dep:winit", "dep:accesskit_winit"]
serde = ["dep:serde"]

[dependencies]
freya-elements = { workspace = true }
freya-engine = { workspace = true }
torin = { workspace = true }
freya-native-core = { workspace = true }
freya-native-core-macro = { workspace = true }
ragnarok = { workspace = true }

dioxus-core = { workspace = true }
dioxus-signals = { workspace = true }
dioxus-core-macro = { workspace = true }
shipyard = { workspace = true }
keyboard-types = "0.8.0"

nom = "7.1.3"
bytes = { workspace = true }
tokio = { workspace = true }
accesskit = { workspace = true }

winit = { workspace = true, optional = true }
accesskit_winit = { workspace = true, optional = true }

rustc-hash = { workspace = true }
tracing = { workspace = true }
itertools = "0.14.0"
smallvec = { workspace = true }
cursor-icon = "1.2.0"

serde = { version = "*", features = ["rc"], optional = true }
bitflags = "2.9.1"

[dev-dependencies]
dioxus = { workspace = true }
freya = { path = "../freya" }
freya-testing = { path = "../testing" }
