[package]
name = "freya-devtools"
version = "0.4.0"
edition = "2024"

[features]
server = [
    "dep:hyper",
    "dep:hyper-util",
    "dep:tokio",
    "dep:tokio-tungstenite",
    "dep:tungstenite",
    "dep:futures",
    "dep:futures-util",
    "dep:http-body-util",
    "dep:bytes",
    "dep:hyper-tungstenite",
]
client = []

[dependencies]
hyper = { version = "1", features = ["server", "http1"], optional = true }
tokio = { version = "1", features = ["full"], optional = true }
hyper-util = { version = "0.1", features = ["tokio"], optional = true }
tokio-tungstenite = { version = "0.27", optional = true }
tungstenite = { version = "0.27", features = ["handshake"], optional = true }
futures-util = { version = "0.3", optional = true }
futures = { version = "0.3", optional = true }
http-body-util = { version = "*", optional = true }
bytes = { version = "1", optional = true }
hyper-tungstenite = { version = "0.18.0", optional = true }
winit = { workspace = true }

freya-core = { workspace = true, features = ["serde"]}
torin = { workspace = true, features = ["serde"] }
freya-native-core = { workspace = true, features = ["serde"] }
freya-engine = { workspace = true }

serde = "*"
serde_json = "*"
