[package]
name = "freya-dom"
description = "Internal DOM abstractions for Freya."
version = "0.1.2"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../../readme.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[package.metadata.docs.rs]
features = ["freya-engine/mocked-engine"]

[features]
shared = []
skia-engine = ["freya-engine/skia-engine"]

[dependencies]
freya-node-state = { workspace = true }
freya-common = { workspace = true }
freya-engine = { workspace = true }
torin = { workspace = true }

dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }

uuid = { workspace = true }
rustc-hash = { workspace = true }
fxhash = { workspace = true }
tracing = { workspace = true }
