[package]
name = "freya-elements"
description = "Internal elements, attributes and events designed for Freya."
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../../readme.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[dependencies]
torin = { workspace = true }
freya-common = { workspace = true }

dioxus-rsx = { workspace = true }
dioxus-native-core = { workspace = true }
dioxus-core-macro = { workspace = true }
dioxus-hooks = { workspace = true }
dioxus-core = { workspace = true }

winit = { workspace = true }
tokio = { workspace = true }
accesskit = { workspace = true }

keyboard-types = "0.7.0"

[dev-dependencies]
freya = { workspace = true }
dioxus = { workspace = true }