[package]
name = "freya-elements"
description = "Internal elements, attributes and events designed for Freya."
version = "0.3.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../../readme.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[dependencies]
torin = { workspace = true }

dioxus-rsx = { workspace = true }
dioxus-core = { workspace = true }

winit = { workspace = true }

keyboard-types = "0.7.0"

[dev-dependencies]
freya = { path = "../freya" }
