[package]
name = "freya-elements"
description = "Internal elements, attributes and events designed for Freya."
version = "0.4.0"
edition = "2021"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
readme = "../../README.md"
homepage = "https://freyaui.dev/"
repository = "https://github.com/marc2332/freya"
keywords = ["gui", "ui", "desktop", "skia", "dioxus"]
categories = ["gui", "asynchronous"]

[dependencies]
torin = { workspace = true }

generational-box = { workspace = true }
dioxus-rsx = { workspace = true }
dioxus-core = { workspace = true }

keyboard-types = "0.8.0"

[dev-dependencies]
freya = { path = "../freya" }
