[package]
name = "freya-animation"
version = "0.4.0-alpha.4"
description = "Animation APIs for Freya"
edition = "2024"
readme = "../../README.md"
license = "MIT"
authors = ["Marc Espín <mespinsanz@gmail.com>"]
homepage = "https://github.com/marc2332/freya"
repository = "https://github.com/marc2332/freya"
keywords = ["freya"]
categories = ["gui"]

[features]
skia-engine = ["freya-core/skia-engine"]

[dependencies]
freya-core = { workspace = true }
easer = { workspace = true }

[dev-dependencies]
freya = { path = "../freya" }
freya-testing = { path = "../freya-testing" }
